fix: beatmaker pps flex

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -28,7 +28,7 @@
           role="listitem"
           class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
         >
-          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4">
+          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]">
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
@@ -65,7 +65,7 @@
           role="listitem"
           class="xl:w-1/3 lg:mx-3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5"
         >
-          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300">
+          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]">
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
@@ -106,7 +106,7 @@
           role="listitem"
           class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
         >
-          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300">
+          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]">
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
@@ -145,7 +145,6 @@
   </div>
 </div>
 
-<!-- Page Container -->
 <div class="flex items-center justify-center bg-gray-900">
   <div class="flex flex-col">
     <div class="flex flex-col">
@@ -168,7 +167,8 @@
         <!-- Team Members -->
         <div class="flex flex-wrap justify-center">
           <!-- Oddgyes -->
-          <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+          <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
+
             <div class="flex flex-col">
               <!-- Avatar -->
               <img
@@ -203,7 +203,8 @@
           </div>
 
           <!-- Shidozz -->
-          <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+          <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
+
             <div class="flex flex-col">
               <!-- Avatar -->
               <img
@@ -238,7 +239,8 @@
           </div>
 
           <!-- DarkMusicBeat -->
-          <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+          <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
+
             <div class="flex flex-col">
               <!-- Avatar -->
               <img
@@ -252,11 +254,28 @@
                 <!-- Name -->
                 <h1 class="text-white text-xl font-bold mb-1" i18n>DarkMusicBeat</h1>
               </div>
+              <div
+                  class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
+                >
+                  <!-- Instagram -->
+                  <a
+                    href="https://www.instagram.com/d.m.b_officiel/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
+                    i18n-title="Instagram profile"
+                  >
+                    <i
+                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
+                    ></i>
+                  </a>
+                </div>
             </div>
           </div>
 
           <!-- NVSDV -->
-          <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+          <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
+
             <div class="flex flex-col">
               <!-- Avatar -->
               <img
