--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -9,7 +9,7 @@
     <div class="flex justify-center items-center flex-col w-full">
       <h1 class="text-white text-4xl font-bold mb-2" i18n>VCG Team</h1>
       <h2
-        class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+        class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full px-2 sm:mx-10"
         i18n
       >
         Three friends became brothers, then partners.
@@ -26,7 +26,7 @@
         <!-- Kitsui -->
         <div
           role="listitem"
-          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
+          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-24 sm:mb-24 xl:max-w-sm lg:w-2/5 min-h-[350px]"
         >
           <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]">
             <div class="absolute -mt-20 w-full flex justify-center">
@@ -63,9 +63,9 @@
         <!-- Biggy -->
         <div
           role="listitem"
-          class="xl:w-1/3 lg:mx-3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5"
+          class="xl:w-1/3 lg:mx-3 sm:w-3/4 md:w-2/5 relative mt-16 mb-24 sm:mb-24 xl:max-w-sm lg:w-2/5"
         >
-          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]">
+          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[330px]">
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
@@ -104,7 +104,7 @@
         <!-- Køni -->
         <div
           role="listitem"
-          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
+          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-24 xl:max-w-sm lg:w-2/5 min-h-[350px]"
         >
           <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]">
             <div class="absolute -mt-20 w-full flex justify-center">
