--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -28,7 +28,9 @@
           role="listitem"
           class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-24 sm:mb-24 xl:max-w-sm lg:w-2/5 min-h-[350px]"
         >
-          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]">
+          <div
+            class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]"
+          >
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
@@ -65,7 +67,9 @@
           role="listitem"
           class="xl:w-1/3 lg:mx-3 sm:w-3/4 md:w-2/5 relative mt-16 mb-24 sm:mb-24 xl:max-w-sm lg:w-2/5"
         >
-          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[330px]">
+          <div
+            class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[330px]"
+          >
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
@@ -106,7 +110,9 @@
           role="listitem"
           class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-24 xl:max-w-sm lg:w-2/5 min-h-[350px]"
         >
-          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]">
+          <div
+            class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4 min-h-[350px]"
+          >
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
@@ -154,7 +160,9 @@
         <div class="flex flex-wrap justify-center text-center">
           <div class="flex justify-center items-center flex-col w-full">
             <!-- Header -->
-            <h1 class="text-white text-4xl font-bold mb-2" i18n>VCG Production</h1>
+            <h1 class="text-white text-4xl font-bold mb-2" i18n>
+              VCG Production
+            </h1>
             <h2
               class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
               i18n
@@ -168,7 +176,6 @@
         <div class="flex flex-wrap justify-center">
           <!-- Oddgyes -->
           <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
-
             <div class="flex flex-col">
               <!-- Avatar -->
               <img
@@ -204,7 +211,6 @@
 
           <!-- Shidozz -->
           <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
-
             <div class="flex flex-col">
               <!-- Avatar -->
               <img
@@ -240,7 +246,6 @@
 
           <!-- DarkMusicBeat -->
           <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
-
             <div class="flex flex-col">
               <!-- Avatar -->
               <img
@@ -252,30 +257,31 @@
               <!-- Details -->
               <div class="text-center mt-6">
                 <!-- Name -->
-                <h1 class="text-white text-xl font-bold mb-1" i18n>DarkMusicBeat</h1>
+                <h1 class="text-white text-xl font-bold mb-1" i18n>
+                  DarkMusicBeat
+                </h1>
               </div>
               <div
-                  class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
+                class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
+              >
+                <!-- Instagram -->
+                <a
+                  href="https://www.instagram.com/d.m.b_officiel/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
+                  i18n-title="Instagram profile"
                 >
-                  <!-- Instagram -->
-                  <a
-                    href="https://www.instagram.com/d.m.b_officiel/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
-                    i18n-title="Instagram profile"
-                  >
-                    <i
-                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
-                    ></i>
-                  </a>
-                </div>
+                  <i
+                    class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
+                  ></i>
+                </a>
+              </div>
             </div>
           </div>
 
           <!-- NVSDV -->
           <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
-
             <div class="flex flex-col">
               <!-- Avatar -->
               <img
@@ -288,6 +294,42 @@
               <div class="text-center mt-6">
                 <!-- Name -->
                 <h1 class="text-white text-xl font-bold mb-1" i18n>NVSDV</h1>
+              </div>
+            </div>
+          </div>
+
+          <!-- No$$if -->
+          <div class="w-1/2 md:w-1/2 lg:w-3/12 mb-6 px-4">
+            <div class="flex flex-col">
+              <!-- Avatar -->
+              <img
+                class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                src="/images/beatmakers/nossif.png"
+                alt="No$$if"
+                i18n-alt="No$$if"
+              />
+              <!-- Details -->
+              <div class="text-center mt-6">
+                <!-- Name -->
+                <h1 class="text-white text-xl font-bold mb-1" i18n>
+                  No$$if
+                </h1>
+              </div>
+              <div
+                class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
+              >
+                <!-- Instagram -->
+                <a
+                  href="https://www.instagram.com/nos.sif/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
+                  i18n-title="Instagram profile"
+                >
+                  <i
+                    class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
+                  ></i>
+                </a>
               </div>
             </div>
           </div>
