feat: artists update

--- a/website/src/app/components/pages/artists/artists.component.html
+++ b/website/src/app/components/pages/artists/artists.component.html
@@ -169,9 +169,66 @@
   </div>
 </section>
 
-<h2 class="text-2xl font-semibold text-white sm:text-3xl text-center" i18n>
-  We collaborated with these artists
-</h2>
+<section class="m-8">
+  <div
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
+  >
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
+      <div
+        class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
+      >
+        <img
+          src="/images/artists/loupa.jpeg"
+          alt="Loupa"
+          class="absolute inset-0 w-full h-full object-cover"
+        />
+      </div>
+      <div>
+        <div class="max-w-lg md:max-w-none">
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl" i18n>
+            🐺 Loupa
+          </h2>
+
+          <p class="mt-4 text-gray-300 font-medium" i18n>
+            Loupa is a French rapper known for his global perspective.
+            He travels around the world to work with artists from abroad,
+            bringing diverse influences to his music.
+          </p>
+
+          <div class="mt-6 flex flex-wrap gap-4">
+            <a
+              href="https://open.spotify.com/artist/6AyhJFNZkX3a3Gidldg9eh?si=AaS3btx-TbqAT3NeYiv62Q"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+              i18n
+            >
+              Spotify
+            </a>
+            <a
+              href="https://www.instagram.com/loupa__officiel/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+              i18n
+            >
+              Instagram
+            </a>
+            <a
+              href="https://www.youtube.com/@LoupaOfficiel"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+              i18n
+            >
+              YouTube
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <section class="m-8">
   <div
@@ -234,67 +291,9 @@
   </div>
 </section>
 
-<section class="m-8">
-  <div
-    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
-  >
-    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
-      <div
-        class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
-      >
-        <img
-          src="/images/artists/loupa.jpeg"
-          alt="Loupa"
-          class="absolute inset-0 w-full h-full object-cover"
-        />
-      </div>
-      <div>
-        <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl" i18n>
-            🐺 Loupa
-          </h2>
-
-          <p class="mt-4 text-gray-300 font-medium" i18n>
-            Loupa is a French rapper who has collaborated extensively with Køni
-            and the Parisian artist Cinco. Known for his global perspective,
-            Loupa travels around the world to work with artists from abroad,
-            bringing diverse influences to his music.
-          </p>
-
-          <div class="mt-6 flex flex-wrap gap-4">
-            <a
-              href="https://open.spotify.com/artist/6AyhJFNZkX3a3Gidldg9eh?si=AaS3btx-TbqAT3NeYiv62Q"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="text-gray-500 hover:text-white font-medium"
-              i18n
-            >
-              Spotify
-            </a>
-            <a
-              href="https://www.instagram.com/loupa__officiel/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="text-gray-500 hover:text-white font-medium"
-              i18n
-            >
-              Instagram
-            </a>
-            <a
-              href="https://www.youtube.com/@LoupaOfficiel"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="text-gray-500 hover:text-white font-medium"
-              i18n
-            >
-              YouTube
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<h2 class="text-2xl font-semibold text-white sm:text-3xl text-center" i18n>
+  We collaborated with these artists
+</h2>
 
 <section class="m-8">
   <div
@@ -310,7 +309,7 @@
           <p class="mt-4 text-gray-300 font-medium" i18n>
             Gaxve, a producer from Spain, Europe, primarily focused on new-age
             Breakcore, Drum & Bass, and Jungle, collaborated with MADPOOF on the
-            tracks "Refresh Token" and "Internal Conflict (Unreleased yet)",
+            tracks "Refresh Token" and "Internal Conflict",
             released via Breakstation.
           </p>
 
@@ -399,7 +398,7 @@
 
           <p class="mt-4 text-gray-300 font-medium" i18n>
             CXMET is a phonkwave producer who collaborated with MADPOOF on the
-            track "EYES OF HEAVEN (Unreleased yet)", released via Breakstation.
+            track "EYES OF HEAVEN", released via Breakstation.
           </p>
 
           <div class="mt-6 flex flex-wrap gap-4">
