--- a/website/src/app/components/layout/layout.component.html
+++ b/website/src/app/components/layout/layout.component.html
@@ -98,6 +98,16 @@
         </li>
         <li>
           <a
+            routerLink="/stage"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            i18n
+            >Stage</a
+          >
+        </li>
+        <li>
+          <a
             routerLink="/services"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
