fix: stage on home page

--- a/website/src/app/components/pages/home/home.component.html
+++ b/website/src/app/components/pages/home/home.component.html
@@ -69,10 +69,11 @@
           class="mt-8 text-pretty text-lg font-medium text-gray-300 sm:text-xl/8"
           i18n="@@description"
         >
-          We distribute beatmakers' beats, release singles and albums, and
-          provide professional recording and voice mixing services. Our team is
-          dedicated to ensuring your music reaches its full potential, offering
-          support every step of the way from creation to distribution.
+          We distribute beatmakers' beats, release singles and albums, 
+          provide professional recording and voice mixing services, and deliver 
+          unforgettable live performances. Our team is dedicated to ensuring your 
+          music reaches its full potential, offering support every step of the way 
+          from creation to distribution and stage performance.
         </p>
       </div>
       <img src="/logo.png" alt="VCG Recordz" class="w-48 h-48" />
@@ -92,6 +93,9 @@
         </a>
         <a routerLink="/team" i18n="@@discover_beatmakers">
           Discover Beatmakers <span aria-hidden="true">&rarr;</span>
+        </a>
+        <a routerLink="/stage" i18n="@@vcg_on_stage">
+          VCG on Stage <span aria-hidden="true">&rarr;</span>
         </a>
       </div>
       <dl
