--- a/website/src/app/components/layout/layout.component.html
+++ b/website/src/app/components/layout/layout.component.html
@@ -19,10 +19,10 @@
       </button>
       <button
         type="button"
-        class="m-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        class="m-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-lg px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         (click)="switchLanguage()"
       >
-        Switch Language
+        {{ getCurrentLanguageFlag() }}
       </button>
 
       <button
