--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -3,6 +3,8 @@ app-home {
 }
 
 .active {
-    color: #007bff;
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: underline;
   }
   
