fix: secret texts

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -95,7 +95,7 @@
                 i18n
               >
                 Ownership, Filming and Acting.<br /><span
-                  class="italic text-gray-300 text-sm"
+                  class="italic text-gray-300 text-sm secret-text"
                   >Biggy is the president but that's a secret, also he imitates
                   crows during every night. If you're reading this, it's either
                   you're selecting it or you've got dark reader installed in
@@ -139,7 +139,7 @@
               >
                 Ownership, Business Management, Mixing, Writing, Rapping, Client
                 Relationship Management and Marketing.<br /><span
-                  class="italic text-gray-300 text-base"
+                  class="italic text-gray-300 text-base secret-text"
                   >Koni is the best rapper ever! And if you've read well, you
                   know who's writing these secret texts.</span
                 >
